--- a/home.html
+++ b/home.html
@@ -24,6 +24,9 @@
     <div id="logo">
         <img src="{{ url_for('static',filename='logo.png') }}" alt="logo_veridis" id="logo_img">
     </div>
+    <div id="logo_white">
+        <img src="{{ url_for('static',filename='logo_white.png') }}" alt="logo_veridis" id="logo_white_img">
+    </div>
     <div id="main_window">
         <div>
             <img src="{{ url_for('static',filename='veridis_green.png') }}" alt="">
