--- a/stats.html
+++ b/stats.html
@@ -47,6 +47,7 @@
             <button onclick="window.location.href='{{ url_for('aff_connexion') }}';">Déconnexion</button>
         </div>
     </div>
+    <div id="white_rectangle"></div>
 
 
 
