--- a/settings.html
+++ b/settings.html
@@ -49,6 +49,7 @@
             <button onclick="window.location.href='{{ url_for('aff_connexion') }}';">Déconnexion</button>
         </div>
     </div>
+    <div id="white_rectangle"></div>
 
 
 
