--- a/home.html
+++ b/home.html
@@ -52,6 +52,7 @@
             <button onclick="window.location.href='{{ url_for('aff_connexion') }}';">Déconnexion</button>
         </div>
     </div>
+    <div id="white_rectangle"></div>
 
 </body>
 </html>
