--- a/connexion.html
+++ b/connexion.html
@@ -13,7 +13,7 @@
         <img src="{{ url_for('static',filename='logo.png') }}" alt="">
     </div>
     <div class="corps_connexion">
-        <form action="http://localhost:5000/connexion" method="post">
+        <form action="{{url_for('connexion')}}" method="post">
             <H1>Connectez-vous !</H1>
             <div class="corps_formulaire">
                 <div class="groupe">
