--- a/stats.html
+++ b/stats.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
-    <link rel="stylesheet" href="{{ url_for('static',filename='tyles/home.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static',filename='home.css') }}">
     <script src="{{ url_for('static',filename='settings.js') }}" type="text/javascript"></script>
     <title>Veridis</title>
 </head>
@@ -29,11 +29,11 @@
     </div>
     <div id="main_window">
         <div class="settings">
-            <h1>Statistiques</h1>
-            <p>Il y a eu {{jour}} alertes aujourd'hui !</p><br>
-            <p>Il y a eu {{semaine}} alertes cette semaine !</p><br>
-            <p>Il y a eu {{mois}} alertes durant ce mois !</p><br>
-            <p>Il y a eu {{annee}} alertes cette année !</p>
+            <h1 class="text">Statistiques</h1>
+            <p class="text">Il y a eu {{jour}} alertes aujourd'hui !</p><br>
+            <p class="text">Il y a eu {{semaine}} alertes cette semaine !</p><br>
+            <p class="text">Il y a eu {{mois}} alertes durant ce mois !</p><br>
+            <p class="text">Il y a eu {{annee}} alertes cette année !</p>
         </div>
     </div>
 
@@ -41,7 +41,7 @@
     <div id="right_menu">
         <div id="user_info">
             <p class="text">Utilisateur actif:</p>
-            <p class="text">Maxime Dautriche</p>
+            <p class="text">{{nom}}</p>
         </div>
         <div class="side_button">
             <button onclick="window.location.href='{{ url_for('aff_connexion') }}';">Déconnexion</button>
